# nabu-hep

./: .gitignore  .gitlint  .pre-commit-config.yaml  .zenodo.json  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: check+build+deploy.yml  commit-messages.yaml  pre-commit.yaml  tests.yml
doc/: conf.py  file-format.rst  requirements.txt
nabu/: __init__.py  _version.py  build_flow.py  goodness_of_fit.py  likelihood.py  maf.py  plot.py  plotting.py  tensorboard.py  train.py  transform_base.py
nabu/flow/: __init__.py  _bijectors.py  _flow_likelihood.py  _flows.py  _serialisation_utils.py  _train.py  bijectors.py  flows.py  metrics.py  serialisation_utils.py
nabu/likelihood/: likelihood_base.py  nflow_likelihood.py
nabu/serialization/: __init__.py  base.py  specs.py
src/llhdflow/: __init__.py  build_flow.py  goodness_of_fit.py  likelihood.py  plot.py  train.py
test/: _train_TEST.py  goodness_of_fit_TEST.py  likelihood_TEST.py  serialization_TEST.py  serialization_io_TEST.py  serialization_specs_TEST.py  test_examples.py  test_fit_script.py  transform_base_TEST.py
test/ATLAS/: atlas-model.nabu
test/LHCb/: lhcb-dataset.npz  lhcb-model.nabu
test/WET/: wet-model.nabu
